--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -5,9 +6,13 @@
     <title>Title</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
 
-    <main></main>
+        </nav>
+    </header>
+
+    <main>{% block content %}{% endblock %}</main>
 
     <footer></footer>
 </body>
