--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,13 @@
-<!DOCTYPE html>
+{% extends "index.html" %}
+
+{% load static %}
+
+{% block content %}
+   <!-- content -->
+{% endblock %}
+
+
+<!-- <!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
@@ -11,4 +20,4 @@
 
     <footer></footer>
 </body>
-</html>
+</html> -->
