--- a/templates/report-problem.html
+++ b/templates/report-problem.html
@@ -3,7 +3,18 @@
 {% load static %}
 
 {% block content %}
-   <!-- content -->
+   <form action="{% url 'profile' %}" method="POST">
+        {% csrf_token %}
+        Проблема: <input type="text" name="title" class="" placeholder="Проблема..."/><br>
+        Тип проблеми: <select name="problem_type" class="">
+            <option value="Сантехнік">Сантехнік</option>
+            <option value="Столяр">Столяр</option>
+            <option value="Електрик">Електрик</option>
+            <option value="Не визначено" selected="selected">Не визначено</option>
+        </select><br>
+        <textarea name="description" maxlength="300" placeholder="Введіть короткий опис проблеми"></textarea><br>
+        <input type="submit" value="Надіслати" class=""/>
+    </form>
 {% endblock %}
 
 
