--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <header></header>
+<h3>Register here</h3>
+<hr>
 
-    <main></main>
+<form action="" method="POST">
+    {% csrf_token %}
 
-    <footer></footer>
-</body>
-</html>
+    {% for field in form %}
+        <div>
+            <p>{{ field.label }}: <br> {{ field }}</p>
+
+            {% for error in field.errors %}
+                <small style="color: red">{{ error }}</small><br>
+            {% endfor %}
+        </div>
+    {% endfor %}
+    <button type="submit">Register</button>
+</form>
