--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <header></header>
+{% extends "index.html" %}
 
-    <main></main>
+{% load static %}
 
-    <footer></footer>
-</body>
-</html>
+{% block content %}
+   <!-- content -->
+{% endblock %}
