--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -6,9 +7,14 @@
 </head>
 <body>
     <header></header>
+    <header>
+        <nav>
 
     <main></main>
+        </nav>
+    </header>
+
+    <main>{% block content %}{% endblock %}</main>
 
     <footer></footer>
 </body>
-</html>
