--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,21 @@
         </nav>
     </header>
 
-    <main>{% block content %}{% endblock %}</main>
+    <main>
+        {% block content %}
+        {% if user.is_authenticated %}
+            <div class="alert alert-success" role="alert">
+                <h3>Welcome {{ user.username }}!</h3>
+                <a href="{% url 'logout' %}">Logout?</a>
+            </div>
+        {% else %}
+            <div class="alert alert-success" role="alert">
+                <h3>Welcome, unverified aboba.</h3>
+                <a href="{% url 'login' %}">Login?</a>
+            </div>
+        {% endif %}
+        {% endblock %}
+    </main>
 
     <footer></footer>
 </body>
