--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,8 @@ header {
     top: 0;
     justify-content: space-between;
     padding: 0 1.2rem;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;}
+    box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
+}
 
 .site-title {
     display: inline-block;
@@ -35,13 +36,63 @@ header {
     font-size: 140%;
 }
 
-main {
-    font-size: 110%;
+#menu-button {
+    vertical-align: middle;
+    font-size: 130%;
+    background: none;
+    border: none;
+    color: #ffffff;
+    border-radius: 10px;
+    height: 2.5rem;
+    width: 2.5rem;
+    cursor: pointer;
+}
+
+#menu-button::before {
+    font-family: "Fontawesome";
+    content: "\f0c9";
+}
+
+#menu-button:hover, #menu-button:focus {
+    background: #ffffff36;
+}
+
+.show {
+    display: block;
+}
+
+nav {
+    display: none;
+    position: absolute;
+    top: 3.125rem;
+    left: 0;
+    z-index: 1;
+    background-color: #ffffff;
     text-align: center;
-    justify-content: center;
+    width: 100vw;
+    box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
+}
+
+nav a {
+    width: 100%;
+    height: 3.125rem;
+    line-height: 3.125rem;
+    display: inline-block;
+    color: #000000;
+    font-size: 140%;
+    border-bottom: #000000 2px solid;
+}
+
+main {
+    font-size: 130%;
+    text-align: center;
     padding-top: 3.125rem;
     background: linear-gradient(#41B562, #9CE4B0);
     flex: 1 0 auto;
+}
+
+main > * {
+    margin-top: 5%;
 }
 
 h1 {
@@ -53,10 +104,36 @@ h1 {
     background: rgba(255, 255, 255, 0.82);
     border-radius: 35px;
     width: 80%;
+    margin: auto;
     padding: 30px;
+}
+
+.instruction ol {
+    text-align: left;
+}
+
+.enter-button {
+    display: inline-block;
+    width: 120px;
+    height: 50px;
+    line-height: 50px;
+    text-decoration: none;
+    border-radius: 40px;
+    color: #ffffff;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.enter-button:hover {
+    background: #000000;
 }
 
 footer {
     flex-shrink: 0;
     justify-content: space-evenly;
+}
+
+footer a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 125%;
 }
