--- a/static/style.css
+++ b/static/style.css
@@ -13,10 +13,15 @@ body {
     box-sizing: border-box;
 }
 
+a {
+    color: #000000;
+    text-decoration: none;
+}
+
 header, footer {
     background: #000000;
     color: #ffffff;
-    height: 3.125rem;
+    height: 4rem;
     width: 100%;
     display: flex;
     align-items: center;
@@ -27,6 +32,9 @@ header {
     top: 0;
     justify-content: space-between;
     padding: 0 1.2rem;
+}
+
+header, nav, .instruction, #enter-button {
     box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
@@ -34,6 +42,7 @@ header {
     display: inline-block;
     color: #ffffff;
     font-size: 140%;
+    font-weight: bold;
 }
 
 #menu-button {
@@ -64,19 +73,18 @@ header {
 nav {
     display: none;
     position: absolute;
-    top: 3.125rem;
+    top: 4rem;
     left: 0;
     z-index: 1;
     background-color: #ffffff;
     text-align: center;
     width: 100vw;
-    box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
 nav a {
     width: 100%;
-    height: 3.125rem;
-    line-height: 3.125rem;
+    height: 4rem;
+    line-height: 4rem;
     display: inline-block;
     color: #000000;
     font-size: 140%;
@@ -84,48 +92,60 @@ nav a {
 }
 
 main {
-    font-size: 130%;
+    font-size: 1.5rem;
     text-align: center;
-    padding-top: 3.125rem;
+    padding: 4rem 0 10%;
     background: linear-gradient(#41B562, #9CE4B0);
     flex: 1 0 auto;
 }
 
 main > * {
-    margin-top: 5%;
+    margin: 10% auto 0;
+    width: 87%;
 }
 
 h1 {
     font-size: 120%;
+    display: inline-block;
     color: #ffffff;
 }
 
 .instruction {
     background: rgba(255, 255, 255, 0.82);
     border-radius: 35px;
-    width: 80%;
-    margin: auto;
-    padding: 30px;
+    padding: 2rem 1rem;
+    font-size: 80%;
 }
 
 .instruction ol {
+    margin: 12% 0 0;
+}
+
+.instruction ol li {
+    margin-top: 30px;
     text-align: left;
+    font-weight: bold;
 }
 
-.enter-button {
+#enter-button {
     display: inline-block;
-    width: 120px;
-    height: 50px;
-    line-height: 50px;
+    width: 10rem;
+    height: 4rem;
+    line-height: 4rem;
+    font-size: 130%;
     text-decoration: none;
-    border-radius: 40px;
+    border-radius: 2.5rem;
     color: #ffffff;
-    background: rgba(0, 0, 0, 0.8);
-}
-
-.enter-button:hover {
     background: #000000;
 }
+
+.authorisation a {
+    text-decoration: underline;
+}
+
+/*.enter-button:hover, .enter-button:active {*/
+/*    background: #000000;*/
+/*}*/
 
 footer {
     flex-shrink: 0;
@@ -134,6 +154,9 @@ footer {
 
 footer a {
     color: #ffffff;
-    text-decoration: none;
     font-size: 125%;
 }
+
+/* @media screen and (min-width: 768px) {
+
+} */
