--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,6 +11,20 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./static/style.css">
     <script src="https://kit.fontawesome.com/72cdf14cdd.js" crossorigin="anonymous"></script>
+    <script>
+        function openMenu() {
+            document.getElementById("menu").classList.toggle("show");
+        }
+
+        window.onclick = function (event) {
+            if (!event.target.matches('#menu-button')) {
+                var dropdown = document.getElementById("menu");
+                if (dropdown.classList.contains('show')) {
+                    dropdown.classList.remove('show');
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
