+- нормальний стиль для телефону

--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ header, nav, .instruction, #enter-button {
 }
 
 #menu-button::before {
-    font-family: "Fontawesome";
+    font-family: "Fontawesome", sans-serif;
     content: "\f0c9";
 }
 
