--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,8 @@
                 <li>Заповни заявку</li>
             </ol>
         </figure>
-        <div>
-            <a href="#" class="enter-button">Вхід</a>
+        <div class="authorisation">
+            <a href="#" id="enter-button">Вхід</a>
             <p>Вперше тут?
                 <a href="#">Реєстрація</a>
             </p>
