--- a/templates/report-problem.html
+++ b/templates/report-problem.html
@@ -1,18 +1,19 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% load static %}
 
 {% block content %}
-   <form action="{% url 'profile' %}" method="POST">
+   <form action="" method="POST">
         {% csrf_token %}
-        Проблема: <input type="text" name="title" class="" placeholder="Проблема..."/><br>
-        Тип проблеми: <select name="problem_type" class="">
-            <option value="Сантехнік">Сантехнік</option>
-            <option value="Столяр">Столяр</option>
-            <option value="Електрик">Електрик</option>
-            <option value="Не визначено" selected="selected">Не визначено</option>
-        </select><br>
-        <textarea name="description" maxlength="300" placeholder="Введіть короткий опис проблеми"></textarea><br>
+        {% for field in form %}
+        <div>
+            <p>{{ field.label }}: <br> {{ field }}</p>
+
+            {% for error in field.errors %}
+                <small style="color: red">{{ error }}</small><br>
+            {% endfor %}
+        </div>
+        {% endfor %}
         <input type="submit" value="Надіслати" class=""/>
     </form>
 {% endblock %}
