--- a/templates/login.html
+++ b/templates/login.html
@@ -3,15 +3,19 @@
 {% load static %}
 
 {% block content %}
-   <h3>login</h3>
+    {% if user.is_autheticated %}
+        <h2>Ви вже зареєстровані, {{ user.username }}</h2>
+    {% else %}
+        <h3>login</h3>
 
-    <form action="" method="POST">
-        {% csrf_token %}
-        {% for field in form %}
-            <p>{{ field.label }}: <br> {{ field }}</p>
-        {% endfor %}
-        <button type="submit">Login</button>
-    </form>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {% for field in form %}
+                <p>{{ field.label }}: <br> {{ field }}</p>
+            {% endfor %}
+            <button type="submit">Login</button>
+        </form>
 
-    <p>Don't have an account? <a href="{% url 'register' %}">Signup here</a></p>
+        <p>Don't have an account? <a href="{% url 'register' %}">Signup here</a></p>
+    {% endif %}
 {% endblock %}
