--- a/templates/report-problem.html
+++ b/templates/report-problem.html
@@ -14,6 +14,6 @@
             {% endfor %}
         </div>
         {% endfor %}
-        <input type="submit" value="Надіслати" class=""/>
+        <input type="submit" value="Надіслати" class="enter-button"/>
     </form>
 {% endblock %}
