засрав все, шо можна

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Hostel Help</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;500;600&display=swap"
@@ -20,7 +20,6 @@
         <div class="navigation">
             <button id="menu-button" onclick="openMenu()" title="Меню сайту"></button>
             <nav id="menu">
-                <a href="index.html" class="active" aria-current="page">Головна</a>
             </nav>
         </div>
     </header>
@@ -31,9 +30,9 @@
     </main>
 
     <footer>
-        <a href="#" target="_blank" class="fa-brands fa-telegram"><span
+        <a href="https://t.me/sr_kpi" target="_blank" class="fa-brands fa-telegram"><span
                 class="fa-sr-only">Telegram</span></a>
-        <a href="#" target="_blank" class="fa-brands fa-instagram"><span
+        <a href="https://www.instagram.com/sr_kpi/" target="_blank" class="fa-brands fa-instagram"><span
                 class="fa-sr-only">Instagram</span></a>
         <a href="#" target="_blank" class="fa-brands fa-facebook"><span
                 class="fa-sr-only">Facebook</span></a>
