--- a/templates/reply.html
+++ b/templates/reply.html
@@ -7,6 +7,6 @@
         {% csrf_token %}
         Кому: <input type="text" name="to" class="" placeholder="Email"/><br>
         <textarea name="message" maxlength="500" placeholder="Введіть відповідь на повідомлення користувача"></textarea><br>
-        <input type="submit" value="Надіслати" class=""/>
+        <input type="submit" value="Надіслати" class="enter-button"/>
     </form>
 {% endblock %}
