--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,14 +3,18 @@ html, body {
     margin: 0;
 }
 
-body {
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-    display: flex;
-    flex-direction: column;
+:root {
+    --main-height: 3.7rem
 }
 
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 a {
@@ -24,8 +28,9 @@ footer a, nav a, .enter-button {
 header, footer {
     background: #000000;
     color: #ffffff;
-    height: 4rem;
-    width: 100vw;
+    height: var(--main-height);
+    line-height: var(--main-height);
+    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -34,7 +39,7 @@ header {
     position: fixed;
     top: 0;
     justify-content: space-between;
-    padding: 0 1.2rem;
+    padding: 0 5%;
 }
 
 header, nav, .instruction, .enter-button {
@@ -42,8 +47,9 @@ header, nav, .instruction, .enter-button {
 }
 
 .site-title {
-    color: #ffffff;
-    font-size: 160%;
+    font-size: 200%;
+    padding-top: 0.25rem;
+    margin: 0;
     font-weight: bold;
 }
 
@@ -74,7 +80,7 @@ header, nav, .instruction, .enter-button {
 nav {
     display: none;
     position: absolute;
-    top: 4rem;
+    top: var(--main-height);
     left: 0;
     z-index: 1;
     background-color: #ffffff;
@@ -84,8 +90,8 @@ nav {
 
 nav a {
     width: 100%;
-    height: 4rem;
-    line-height: 4rem;
+    height: var(--main-height);
+    line-height: var(--main-height);
     display: inline-block;
     color: #000000;
     font-size: 140%;
@@ -95,14 +101,14 @@ nav a {
 main {
     font-size: 1.5rem;
     text-align: center;
-    padding: 4rem 0 10%;
+    padding: var(--main-height) 0 10%;
     background: linear-gradient(#41B562, #9CE4B0);
     flex: 1 0 auto;
 }
 
 main > * {
     margin: 10% auto 0;
-    width: 87%;
+    width: 88%;
 }
 
 h1 {
@@ -110,22 +116,38 @@ h1 {
     display: inline-block;
 }
 
-.main-h1 {
-    font-size: 120%;
-}
-
 .instruction {
     background: rgba(255, 255, 255, 0.82);
     border-radius: 35px;
     padding: 2rem 1rem;
-    font-size: 95%;
+}
+
+.instruction figcaption {
+    width: 90%;
+    font-size: 120%;
+    margin: 0 auto;
+}
+
+.list-decoration {
+    margin: 0 auto;
+    max-width: 62%;
+}
+
+.icons-block, .instruction ol {
+    margin: 8% 0 0;
+}
+
+.icons-block {
+    width: 10%;
+    float: left;
 }
 
 .instruction ol {
-    margin: 12% 0 0;
+    display: inline-block;
+    width: 90%;
 }
 
-.instruction ol li {
+.instruction ol li, .icons-block i {
     margin-top: 30px;
     text-align: left;
     font-weight: bold;
@@ -136,14 +158,14 @@ button {
 }
 
 form {
-    text-align: start;
     display: flex;
     flex-direction: column;
-    justify-items: center;
+    flex-wrap: wrap;
+    text-align: start;
     font-size: 130%;
     width: 80%;
     max-width: 35rem;
-    margin: 0 auto;
+    margin-top: 6%;
 }
 
 input, textarea, select {
@@ -151,14 +173,16 @@ input, textarea, select {
     background: #ffffff;
 }
 
-input, textarea, select, .enter-button {
+input, textarea, select, .enter-button, optgroup {
     font-family: "Yanone Kaffeesatz", sans-serif;
     display: inline-block;
     border: none;
+    font-size: 75%;
+    padding: 0.6rem;
 }
 
 input, select {
-    width: 12rem;
+    width: 100%;
     height: 2.5rem;
 }
 
@@ -167,21 +191,25 @@ input:focus, textarea:focus {
 }
 
 textarea {
+    width: 100%;
     resize: none;
 }
 
 .enter-button {
-    width: 10rem;
-    height: 4rem;
-    line-height: 4rem;
-    font-size: 100%;
+    min-width: 10rem;
+    max-width: fit-content;
+    padding: 0 2.5rem;
+    height: var(--main-height);
+    line-height: var(--main-height);
+    font-size: 80%;
     border-radius: 2.5rem;
     color: #ffffff;
     background: #000000;
+    margin: 0 auto;
 }
 
 a.enter-button {
-    font-size: 125%
+    font-size: 100%
 }
 
 footer {
