--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,18 @@
 
 <figure class="instruction">
     <figcaption>Повідом адміністрацію про наявну проблему за три кроки:</figcaption>
-    <ol>
-        <li>Авторизуйся</li>
-        <li>Обери тип проблеми</li>
-        <li>Заповни заявку</li>
-    </ol>
+    <div class="list-decoration">
+        <div class="icons-block">
+            <i class="fa-solid fa-user"><span class="fa-sr-only">Enter</span></i>
+            <i class="fa-solid fa-hand-pointer"><span class="fa-sr-only">Choose</span></i>
+            <i class="fa-solid fa-laptop"><span class="fa-sr-only">Fill</span></i>
+        </div>
+        <ol>
+            <li>Авторизуйся</li>
+            <li>Обери тип проблеми</li>
+            <li>Заповни заявку</li>
+        </ol>
+    </div>
 </figure>
 
 {% if user.is_authenticated %}
