--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
         <form action="" method="POST">
             {% csrf_token %}
             {% for field in form %}
-                <p>{{ field.label }}: <br> {{ field }}</p>
+                <p>{{ field.label }}: {{ field }}</p>
             {% endfor %}
             <button type="submit" class="enter-button">Вхід</button>
         </form>
