--- a/templates/register.html
+++ b/templates/register.html
@@ -3,17 +3,18 @@
 {% load static %}
 
 {% block content %}
+    <h1>Реєстрація</h1>
    <form action="" method="POST">
     {% csrf_token %}
     {% for field in form %}
         <div>
-            <p>{{ field.label }}: <br> {{ field }}</p>
+            <p>{{ field.label }}: {{ field }}</p>
 
             {% for error in field.errors %}
                 <small style="color: red">{{ error }}</small><br>
             {% endfor %}
         </div>
     {% endfor %}
-    <button type="submit">Register</button>
+    <button type="submit" class="enter-button">Зареєструватися</button>
 </form>
 {% endblock %}
