--- a/templates/report-problem.html
+++ b/templates/report-problem.html
@@ -3,11 +3,12 @@
 {% load static %}
 
 {% block content %}
+    <h1>Повідомити про проблему</h1>
    <form action="" method="POST">
         {% csrf_token %}
         {% for field in form %}
         <div>
-            <p>{{ field.label }}: <br> {{ field }}</p>
+            <p>{{ field.label }}: {{ field }}</p>
 
             {% for error in field.errors %}
                 <small style="color: red">{{ error }}</small><br>
