--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,8 +4,91 @@
 
 {% block content %}
    {% if user.is_superuser %}
-      <p>Hello SUPERuser</p>
+      {% if reports %}
+         {% for report in reports %}
+            <div class="">
+               <h3>{{ report.email }}</h3>
+               <h2>{{ report.title }}</h2>
+               <p>{{ report.date }}</p>
+               <h6>{{ report.problem_type }}</h6>
+               <h6>{{ report.dormitory }}</h6>
+               <p>{{ report.exact_place }}</p>
+               <p>{{ report.description }}</p>
+               <button onclick="">Відповісти</button>
+            </div>
+            <!-- це має з'являтись після нажаття на кнопку відповісти -->
+            <form action="" method="POST">
+               {% csrf_token %}
+               {% for field in form %}
+                  {{ field.label }}
+                  {{ field }}
+               {% endfor %}
+               <input type="hidden" name="report_id" value="{{ report.id }}">
+               <input type="submit" value="Надіслати"/>
+            </form>
+            <!-- це має з'являтись після нажаття на кнопку відповісти -->
+
+            {% if report.contact_emails.all %}
+               <button>Показати відповіді</button>
+            {% endif %}
+            <!-- це має бути сховане, і якщо тисне що хоче переглянути наявні реплаї, тоді показуєм -->
+            {% for reply in report.contact_emails.all %}
+                <div class="">
+                  <p class="">{{ reply.date }}</p>
+                  <p>{{ reply.message }}</p>
+               </div>
+            {% endfor %}
+            <!-- це має бути сховане, і якщо тисне що хоче переглянути наявні реплаї, тоді показуєм -->
+
+         {% endfor %}
+      {% endif %}
+
    {% else %}
-      <p>Hello user</p>
-   {% endif %}
+      <h2>Мої повідомлення</h2>
+      {% for report in reports %}
+         <div class="">
+            <h2>{{ report.title }}</h2>
+            <p>{{ report.date }}</p>
+            <h6>{{ report.problem_type }}</h6>
+            <h6>{{ report.dormitory }}</h6>
+            <p>{{ report.exact_place }}</p>
+            <p>{{ report.description }}</p>
+         </div>
+
+         {% if report.contact_emails.all %}
+            <button>Показати відповіді</button>
+         {% endif %}
+         <!-- це має бути сховане, і якщо тисне що хоче переглянути наявні реплаї, тоді показуєм -->
+         {% for reply in report.contact_emails.all %}
+               <div class="">
+               <p class="">{{ reply.date }}</p>
+               <p>{{ reply.message }}</p>
+            </div>
+         {% endfor %}
+         <!-- це має бути сховане, і якщо тисне що хоче переглянути наявні реплаї, тоді показуєм -->
+      {% endfor %}
+   {% endif %} 
+
+   {% if reports.has_other_pages %}
+         <ul class="pagination">
+            {% if reports.has_previous %}
+               <li><a href="?page={{ reports.previous_page_number }}">&laquo;</a></li>
+            {% else %}
+               <li class="disabled"><span>&laquo;</span></li>
+            {% endif %}
+            {% for i in reports.paginator.page_range %}
+               {% if reports.number == i %}
+               <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+               {% else %}
+               <li><a href="?page={{ i }}">{{ i }}</a></li>
+               {% endif %}
+            {% endfor %}
+            {% if reports.has_next %}
+               <li><a href="?page={{ reports.next_page_number }}">&raquo;</a></li>
+            {% else %}
+               <li class="disabled"><span>&raquo;</span></li>
+            {% endif %}
+         </ul>
+      {% endif %}
+      
 {% endblock %}
