--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
+    {% block css_files %}
+    {% endblock css_files %}
     <script src="{% static 'js/script.js' %}"></script>
     <script src="https://kit.fontawesome.com/72cdf14cdd.js" crossorigin="anonymous"></script>
 </head>
