--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,3 +1,4 @@
+/* для зручності */
 div.report{
     background-color: rgba(156, 228, 176, 0.9);
 }
@@ -6,3 +7,4 @@ div.report{
     background-color: rgba(255, 255, 255, 0.9);
 }
 
+/* для зручності */
