--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -7,4 +7,11 @@ div.report{
     background-color: rgba(255, 255, 255, 0.9);
 }
 
-/* для зручності */
+#report-answer {
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 5%;
+    transform: translate(-50%, 5%);
+    z-index: 1000;
+}
