--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
    {% if user.is_superuser %}
       {% if reports %}
          {% for report in reports %}
-         <div class="report">
+         <div class="report" id="{{ report.id }}">
                <div class="report-content">
                   <p>{{ report.date }}   {{ report.status }} <a onclick="return confirm('Ви впевнені, що бажаєте видалити запис?')" href="{% url 'delete_report' dormitory report.id %}">X</a>
                      <a href="https://t.me/share/url?url=http://127.0.0.1:8000/&text={{ report.date }}%0A
@@ -24,25 +24,28 @@
                   <h6>{{ report.dormitory }}</h6>
                   <p>{{ report.exact_place }}</p>
                   <p>{{ report.description }}</p>
-                  <form action="{% url 'change_status' dormitory report.id %}" method="POST">
+                  <form action="{% url 'change_status' dormitory report.id %}?next={{ request.path|urlencode }}#{{ report.id }}" method="POST">
                      {% csrf_token %}
                      {% if report.status == "Неактивна" %}
                         <button type="submit">Прийняти</button>
                      {% elif report.status == "Активна" %}
                         <button type="submit" onclick="return confirm('Ви впевнені, що бажаєте закрити запис?')">Закрити</button>
-                        <button onclick="">Відповісти</button>
                      {% endif %}
                   </form>
+                  {% if report.status == "Активна" %}
+                     <button class="reply-button" onclick="showAnswerPopup()">Відповісти</button>
+                  {% endif %}
                </div>
                <!-- це має з'являтись після нажаття на кнопку відповісти -->
-               <form action="" method="POST" class="report-answer">
+               <form action="" method="POST" id="report-answer">
+                  <button type="button" class="cancel" onclick="hideAnswerPopup()">Х</button>
                   {% csrf_token %}
                   {% for field in form %}
                      {{ field.label }}
                      {{ field }}
                   {% endfor %}
                   <input type="hidden" name="report_id" value="{{ report.id }}">
-                  <input type="submit" value="Надіслати"/>
+                  <input type="submit" value="Надіслати" onclick="hideAnswerPopup()"/>
                </form>
                <!-- це має з'являтись після нажаття на кнопку відповісти -->
 
