password reset added

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,7 @@
             {% endfor %}
             <button type="submit" class="enter-button">Вхід</button>
         </form>
+        <p><a href="{% url 'password_reset' %}">Забули пароль?</a></p>
         <p>Вперше тут?
             <a href="{% url 'register' %}">Реєстрація</a>
         </p>
