зробив лого посиланням на індекс-сторінку

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <p class="site-title">HOSTEL HELP KPI</p>
+        <a href="{% url 'index' %}"><p class="site-title">HOSTEL HELP KPI</p></a>
         <div class="navigation">
             <button id="menu-button" onclick="openMenu()" title="Меню сайту"></button>
             <nav id="menu">
