--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,7 @@ header, nav, .instruction, .enter-button {
     padding-top: 0.25rem;
     margin: 0;
     font-weight: bold;
+    color: #FFF;
 }
 
 #menu-button {
