початковий вигляд для large screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1 class="main-h1">Вирішення побутових проблем жителів студміста КПІ</h1>
 
-<figure class="instruction">
+<figure class="instruction main-block">
     <figcaption>Повідом адміністрацію про наявну проблему за три кроки:</figcaption>
     <div class="list-decoration">
         <div class="icons-block">
