--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,8 @@ html, body {
 }
 
 :root {
-    --main-height: 3.7rem
+    --main-height: 3.5rem;
+    --main-block-bg: rgba(255, 255, 255, 0.82);
 }
 
 * {
@@ -42,7 +43,7 @@ header {
     padding: 0 5%;
 }
 
-header, nav, .instruction, .enter-button {
+header, nav, .main-block, .enter-button {
     box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
@@ -112,14 +113,20 @@ main > * {
     width: 88%;
 }
 
-h1 {
+.main-block {
+    width: 88%;
+    background: var(--main-block-bg);
+    border-radius: 35px;
+    max-width: 28.125rem;
+}
+
+
+h1, h2 {
     color: #ffffff;
     display: inline-block;
 }
 
 .instruction {
-    background: rgba(255, 255, 255, 0.82);
-    border-radius: 35px;
     padding: 2rem 1rem;
 }
 
@@ -148,6 +155,7 @@ h1 {
     width: 90%;
 }
 
+
 .instruction ol li, .icons-block i {
     margin-top: 30px;
     text-align: left;
@@ -158,14 +166,28 @@ button {
     cursor: pointer;
 }
 
+.right {
+    width: 100%;
+    margin: 0;
+}
+
+.right > *, .left > * {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.left {
+    display: none;
+    margin: 0;
+}
+
 form {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: start;
     font-size: 130%;
-    width: 80%;
-    max-width: 35rem;
+    padding: 6% 6%;
     margin-top: 6%;
 }
 
@@ -231,6 +253,26 @@ main div .report{
 
 /* для зручності */
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 540px) {
+    header {
+        padding: 0 1.8rem;
+    }
 
-} */
+    main > * {
+        margin: 5% auto 0;
+    }
+    h1, h2 {
+    max-width: 28.125rem;
+}
+}
+
+@media screen and (min-width: 1000px) {
+    .left, .right {
+        display: inline-block;
+        width: 50%;
+    }
+
+    .left {
+        float: left;
+    }
+}
