--- a/templates/register.html
+++ b/templates/register.html
@@ -3,8 +3,27 @@
 {% load static %}
 
 {% block content %}
-    <h1>Реєстрація</h1>
-   <form action="" method="POST">
+<div class="left">
+        <h1 class="main-h1">Вирішення побутових проблем жителів студміста КПІ</h1>
+        <figure class="instruction main-block">
+        <figcaption>Повідом адміністрацію про наявну проблему за три кроки:</figcaption>
+        <div class="list-decoration">
+            <div class="icons-block">
+                <i class="fa-solid fa-user"><span class="fa-sr-only">Enter</span></i>
+                <i class="fa-solid fa-hand-pointer"><span class="fa-sr-only">Choose</span></i>
+                <i class="fa-solid fa-laptop"><span class="fa-sr-only">Fill</span></i>
+            </div>
+            <ol>
+                <li>Авторизуйся</li>
+                <li>Обери тип проблеми</li>
+                <li>Заповни заявку</li>
+            </ol>
+        </div>
+        </figure>
+    </div>
+<div class="right">
+    <h2>Реєстрація</h2>
+    <form action="" method="POST" class="main-block">
     {% csrf_token %}
     {% for field in form %}
         <div>
@@ -18,4 +37,5 @@
     {% endfor %}
     <button type="submit" class="enter-button">Зареєструватися</button>
 </form>
+    </div>
 {% endblock %}
